# OTL

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  clippy.toml  config.example.toml  deny.toml  docker-compose.gpu.yml  docker-compose.yml  librust_out.rlib
.cargo/: audit.toml  config.toml
.github/workflows/: cd.yml  ci.yml  release.yml  security-audit.yml
.history/: 2025-12-19_fix_ollama_streaming.md  2025-12-19_rag_pipeline_document_upload.md  2025-12-20_docx_upload_support.md  2025-12-20_rag_pipeline_document_upload_test.md  2025-12-20_rag_query_timeout_investigation.md  2025-12-21_api_security_testing.md  2025-12-21_architecture_analysis.md  2025-12-21_auth_system_design.md  2025-12-21_database_integration_verification_handlers.md  2025-12-21_issue2_graph_api_implementation.md  2025-12-21_p1_architecture_fixes.md  2025-12-21_security_fixes_and_parallel_indexing.md  2025-12-23_auth_module_setup.md  2025-12-23_issue3_document_management_ops.md  2025-12-23_p2_auth_database_layer.md  2025-12-23_p3_auth_services_handlers.md  2025-12-24_auth_system_phase4_5.md  2025-12-24_security_audit_logging.md  2025-12-24_security_audit_setup.md  2025-12-24_token_blacklist_implementation.md  2025-12-25_p1_rag_caching_implementation.md  2025-12-25_repository_migration.md  2025-12-25_security_monitoring_completion.md  README.md
.history/sprint00/: 2025-12-02_sprint00_final.md
.history/sprint01/: 2025-12-02_sprint01_final.md
.history/sprint02/: 2025-12-03_sprint02_final.md  2025-12-03_sprint02_ner_re_hitl.md
.history/sprint03/: 2025-12-03_sprint03_final.md  2025-12-18_sprint03_completion_final.md
.history/sprint04/: 2025-12-04_sprint04_final.md  2025-12-18_sprint04_completion.md
.history/templates/: dev_template.md  fix_template.md  review_template.md  verify_template.md
crates/otl-api/: Cargo.toml
crates/otl-api/src/: audit.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  routes.rs  state.rs
crates/otl-api/src/auth/: jwt.rs  middleware.rs  mod.rs  models.rs  password.rs  repository.rs  service.rs
crates/otl-api/src/handlers/: auth.rs  documents.rs  graph.rs  health.rs  mod.rs  query.rs  verify.rs
crates/otl-api/src/middleware/: metrics.rs  mod.rs  rate_limit.rs  security_headers.rs
crates/otl-api/tests/: api_tests.rs
crates/otl-cli/: Cargo.toml
crates/otl-cli/src/: main.rs
crates/otl-core/: Cargo.toml
crates/otl-core/src/: config.rs  lib.rs  metadata.rs
crates/otl-extractor/: Cargo.toml
crates/otl-extractor/src/: hitl.rs  lib.rs  loader.rs  metrics.rs  ner.rs  relation.rs
crates/otl-extractor/src/prompts/: ner_system.txt  re_system.txt
crates/otl-graph/: Cargo.toml
crates/otl-graph/src/: lib.rs  search.rs  surrealdb_store.rs
crates/otl-ocr/: Cargo.toml
crates/otl-ocr/src/: lib.rs
crates/otl-parser/: Cargo.toml
crates/otl-parser/src/: docx.rs  excel.rs  lib.rs  pdf.rs
crates/otl-rag/: Cargo.toml
crates/otl-rag/src/: cache.rs  lib.rs  llm.rs
crates/otl-vector/: Cargo.toml
crates/otl-vector/src/: embedding.rs  lib.rs  qdrant_store.rs
data/: DATASET_GUIDE.md
data/evaluation/: qa_set.json
data/ontologies/: ONTOLOGY_GUIDE.md  hr_ontology.owl
data/synthetic/documents/: Approval_Workflow.md  Leave_Policy_Summary.md
data/synthetic/metadata/: documents.json
deploy/argocd/: README.md  application.yaml  project.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: DEPLOYMENT.md  PROJECT.md  SECURITY.md  SPRINT_PLAN.md  TECHNICAL_GUIDE.md  UBUNTU_MIGRATION.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  infrastructure.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
migrations/: 001_auth_schema.sql
scripts/: init-db.sql  setup-ubuntu.sh
