[package]
name = "otl-api"
description = "REST/gRPC API server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "otl-api"
path = "src/main.rs"

[features]
# Feature to enable test utilities for integration tests
test-utils = []

[dependencies]
otl-core = { path = "../otl-core" }
otl-rag = { path = "../otl-rag" }
otl-vector = { path = "../otl-vector" }
otl-graph = { path = "../otl-graph" }
otl-parser = { path = "../otl-parser" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
validator = { version = "0.20", features = ["derive"] }
futures = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
pdf-extract = { workspace = true }
docx-rs = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

[dev-dependencies]
otl-api = { path = ".", features = ["test-utils"] }
