[package]
name = "otl-parser"
description = "Document parsing for various file formats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# PDF parsing
pdf-extract = { workspace = true }

# DOCX parsing
docx-rs = { workspace = true }

# Excel parsing
calamine = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
